fixed breakpoint issue with overflow

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -80,7 +80,7 @@
     }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 431px) {
     .navbar-title {
         font-size: larger;
     }
